--- a/Index.html
+++ b/Index.html
@@ -177,17 +177,16 @@
                                             <div class="col-md-5 col-lg-5">
                                                 <p class="subtitle-top text-dark">About me</p>
                                                 <h2 class="title-uppercase">My mission is<br> <span
-                                                        class="text-primary">design &amp; develop</span> the best
-                                                    Websites around</h2>
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
-                                                dicta sit pariatur odio unde deleniti eveniet magni cum, ad iure, vel
-                                                nisi minima vero voluptates ut ipsum amet iusto hic.
+                                                        class="text-primary">develop</span> the best
+                                                    products possible, be it Games, Websites, or Software</h2>
+                                                    If I had to describe myself with a single statement i would have to go with the following: "When I was a kid, I would always struggle putting on helmets due to having a physically bigger head than most
+                                                    and you know what they say about big heads, big brains, so it must mean that I am very smart."
                                             </div>
                                             <div class="col-md-6 col-lg-5 col-md-offset-1 col-lg-offset-2">
                                                 <div class="progress-bars">
                                                     <div class="clearfix">
-                                                        <div class="number pull-left">Development</div>
-                                                        <div class="number pull-right">80%</div>
+                                                        <div class="number pull-left">Game Development </div>
+                                                        <div class="number pull-right">NBCC ITGD - Graduate in June 2025</div>
                                                     </div>
                                                     <div class="progress">
                                                         <div class="progress-bar" role="progressbar" style="width: 80%"
@@ -195,32 +194,33 @@
                                                         </div>
                                                     </div>
                                                     <div class="clearfix">
-                                                        <div class="number pull-left">WordPress</div>
-                                                        <div class="number pull-right">70%</div>
+                                                        <div class="number pull-left">Website Front-end</div>
+                                                        <div class="number pull-right">NBCC ITPA - Graduated June 2023</div>
                                                     </div>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" style="width: 70%"
+                                                        <div class="progress-bar" role="progressbar" style="width: 100%"
                                                             aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
                                                     <div class="clearfix">
-                                                        <div class="number pull-left">Design</div>
-                                                        <div class="number pull-right">80%</div>
+                                                        <div class="number pull-left">Website Back-end</div>
+                                                        <div class="number pull-right">NBCC ITPA - Graduated June 2023</div>
                                                     </div>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" style="width: 80%"
+                                                        <div class="progress-bar" role="progressbar" style="width: 100%"
                                                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
                                                     <div class="clearfix">
-                                                        <div class="number pull-left">Marketing</div>
-                                                        <div class="number pull-right">60%</div>
+                                                        <div class="number pull-left">Database Management</div>
+                                                        <div class="number pull-right">NBCC ITPA - Graduated June 2023</div>
                                                     </div>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" style="width: 60%"
+                                                        <div class="progress-bar" role="progressbar" style="width: 100%"
                                                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
@@ -254,26 +254,51 @@
                                                 <h2 class="title-uppercase text-white">Featured works</h2>
                                                 <div class="row-project-box row">
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
+                                                        <a href="https://www.frederictonregionmuseum.com/" target="_blank" rel="noopener noreferrer" class="project-box">
+                                                            <div class="project-box-inner">
+                                                                <h5>Fredericton Museum's Website (5 members)</h5>
+                                                                <div class="project-category">Web Development & Database Management</div>
+                                                                <div class=" pull-right">ps. Click For More Info</div>
+                                                            </div>
+                                                        </a>
+                                                        </div>
+                                                        <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
                                                         <a href="" class="project-box">
                                                             <div class="project-box-inner">
-                                                                <h5>UCAM Minimalist Apartment</h5>
-                                                                <div class="project-category">House Design</div>
+                                                                <h5>Global Game Jam 2024 (4 members)</h5>
+                                                                <div class="project-category">Game Development</div>
+                                                                <div class="project-category">Role: Animation, Programmer</div>
+                                                                <!-- <div class="project-category">->3D Infinity Runner Game</div> -->
+                                                                </div>
+                                                                </a>
+                                                                </div>
+                                                                <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
+                                                                    <a href="" class="project-box">
+                                                                        <div class="project-box-inner">
+                                                                            <h5>2.5D Crystal Knight (4 members)</h5>
+                                                                            <div class="project-category">Game Development</div>
+                                                                            <div class="project-category">Role: Programmer</div>
+                                                                            <!-- <div class="project-category">->2.5D RPG Quest Game</div> -->
+                                                                            <!-- <div class=" pull-right">Click For More</div> -->
                                                             </div>
                                                         </a>
                                                     </div>
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
                                                         <a href="" class="project-box">
                                                             <div class="project-box-inner">
-                                                                <h5>Scadinavan Living Room</h5>
-                                                                <div class="project-category">House Design</div>
+                                                                <h5>Global Game Jam 2025</h5>
+                                                                <div class="project-category">Game Development</div>
+                                                                <div class="project-category">Role: Team Lead, Main Programmer, Animations</div>
+                                                                <!-- <div class="project-category">->2D Dungion Game</div> -->
+                                                                <!-- <div class=" pull-right">Click For More</div> -->
                                                             </div>
                                                         </a>
                                                     </div>
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
                                                         <a href="" class="project-box">
                                                             <div class="project-box-inner">
-                                                                <h5>Office For Fashion Brand Store</h5>
-                                                                <div class="project-category">Commercial Design</div>
+                                                                <h5>Rennovate Toilet</h5>
+                                                                <div class="project-category">House Design</div>
                                                             </div>
                                                         </a>
                                                     </div>
@@ -302,8 +327,9 @@
                                                         </a>
                                                     </div>
                                                 </div>
-                                                <a href="projects.html" class="h5 link-arrow text-white">view all projects <i
-                                                        class="icon icon-chevron-right"></i></a>
+                                                <div class="col-project-box col-sm-6 col-md-4 col-lg-3 pull-right">
+                                                    <a href="projects.html" class="h5 link-arrow text-white">view all projects <i class="icon icon-chevron-right"></i></a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
