--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
         <li><a href="project2.html">Project 2</a></li>
         <li><a href="project3.html">Project 3</a></li>
     </ul>
-    <a href="index.html">Back to Home</a>
+    <a href="index.html#page3">Back to Home</a>
 </body>
 
 </html>
