--- a/Index.html
+++ b/Index.html
@@ -37,11 +37,11 @@
 
     <div class="menu">
         <span class="close-menu icon-cross2 right-boxed"></span>
-        <div class="menu-lang right-boxed">
+        <!-- <div class="menu-lang right-boxed">
             <a href="" class="active">Eng</a>
             <a href="">Fra</a>
             <a href="">Ger</a>
-        </div>
+        </div> -->
         <ul class="menu-list right-boxed">
             <li data-menuanchor="page1">
                 <a href="#page1">Home</a>
@@ -129,11 +129,11 @@
         2025<!--© Jonny 2017. ??? its open source so i dont think this is necessary but ill include the designed by-->
     </div>
     <div class="lang-bottom white boxed">
-        <div class="menu-lang">
+        <!-- <div class="menu-lang">
             <a href="" class="active">Eng</a>
             <a href="">Fra</a>
             <a href="">Ger</a>
-        </div>
+        </div> -->
     </div>
     <div class="pagepiling">
         <div data-anchor="page1" class="pp-scrollable text-white section section-1">
@@ -184,12 +184,19 @@
                                             </div>
                                             <div class="col-md-6 col-lg-5 col-md-offset-1 col-lg-offset-2">
                                                 <div class="progress-bars">
+                                                    <!-- Title section -->
+                                                    <div class="clearfix">
+                                                        <div class="number pull-left">Skills</div>
+                                                        <div class="number pull-right">Studied Where</div>
+                                                        <div class="hr-line"></div>
+                                                    </div>
+                                                    <!-- Title section -->
                                                     <div class="clearfix">
                                                         <div class="number pull-left">Game Development </div>
                                                         <div class="number pull-right">NBCC ITGD - Graduate in June 2025</div>
                                                     </div>
                                                     <div class="progress">
-                                                        <div class="progress-bar" role="progressbar" style="width: 80%"
+                                                        <div class="progress-bar" role="progressbar" style="width: 100%" 
                                                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
@@ -403,7 +410,7 @@
                                                                 <h6 class="resume-type">SPECIALIZATION COURSE</h6>
                                                                 <p class="resume-study">University of studies, Poland,
                                                                     Cracow</p>
-                                                                <p class="resume-date text-primary">Jan 2004 - Dec 2006
+                                                                <p class="resume-date text-secondary">Jan 2004 - Dec 2006
                                                                 </p>
                                                                 <p class="resume-text">Lorem ipsum dolor sit amet,
                                                                     consectetur adipisicing elit. Minus nobis animi
@@ -415,7 +422,7 @@
                                                                 <h6 class="resume-type">SPECIALIZATION COURSE</h6>
                                                                 <p class="resume-study">University of studies, Poland,
                                                                     Cracow</p>
-                                                                <p class="resume-date text-primary">Jan 2004 - Dec 2006
+                                                                <p class="resume-date text-secondary">Jan 2004 - Dec 2006
                                                                 </p>
                                                                 <p class="resume-text">Lorem ipsum dolor sit amet,
                                                                     consectetur adipisicing elit. Minus nobis animi
@@ -438,7 +445,7 @@
                                                                 <h6 class="resume-type">WEBDESIGNER & FRONT-END</h6>
                                                                 <p class="resume-study">University of studies, Poland,
                                                                     Cracow</p>
-                                                                <p class="resume-date text-primary">Jan 2004 - Dec 2006
+                                                                <p class="resume-date text-secondary">Jan 2004 - Dec 2006
                                                                 </p>
                                                                 <p class="resume-text">Lorem ipsum dolor sit amet,
                                                                     consectetur adipisicing elit. Minus nobis animi
@@ -450,7 +457,7 @@
                                                                 <h6 class="resume-type">SPECIALIZATION COURSE</h6>
                                                                 <p class="resume-study">University of studies, Poland,
                                                                     Cracow</p>
-                                                                <p class="resume-date text-primary">Jan 2004 - Dec 2006
+                                                                <p class="resume-date text-secondary">Jan 2004 - Dec 2006
                                                                 </p>
                                                                 <p class="resume-text">Lorem ipsum dolor sit amet,
                                                                     consectetur adipisicing elit. Minus nobis animi
@@ -477,7 +484,7 @@
                     <div class="vertical-centred">
                         <div class="boxed boxed-inner">
                             <div class="vertical-title text-dark hidden-xs hidden-sm"><span>Partners</span></div>
-                            <div class="boxed">
+                            <!-- <div class="boxed">
                                 <div class="container">
                                     <div class="intro overflow-hidden">
                                         <div class="row">
@@ -520,7 +527,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
