--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,12 @@
     <link href="css/style.css" rel="stylesheet" media="screen">
     <link href="css/mystyles.css" rel="stylesheet">
 
+    <link href="css/scss/cssAnim.scss" rel="stylesheet">
+
+    <link rel="stylesheet/less" type="text/css" href="css/less/styleLess.less" />
+    <script src="https://cdn.jsdelivr.net/npm/less" ></script>
+
+
     <!-- <script src="assets/fontawesome-free-6.7.2-web/fontawesome-free-6.7.2-web/js/brands.min.js"></script> -->
     <script src="assets/fontawesome-free-6.7.2-web/fontawesome-free-6.7.2-web/js/all.js"></script>
 </head>
@@ -372,7 +378,9 @@
                                         <div id="project-modal" class="modal">
 
                                             <div class="modal-content">
-                                                <span class="close">&times;</span>
+                                                <!-- <span class="button-close">&times;</span> -->
+                                                <span class="close"><a class="close-button-less">Close</a></span>
+                                                
                                                 <!-- <h2 id="modal-title"></h2> -->
                                                 <div class="modal-header">
                                                     <h2 id="modal-title"></h2>
