Fixed Project page box hover effect

--- a/Index.html
+++ b/Index.html
@@ -95,7 +95,7 @@
             <span class="icon-bar"></span>
         </button>
 
-        <a class="brand" href="#">
+        <a class="brand" href="index.html#page1">
             <img class="brand-img" alt="" src="images/Default_Logo_1024x1024.jpg"> <!-- Logo -->
             <div class="brand-info">
                 <div class="brand-name">Dark Rose </div> <!-- Brand Name -->
