--- a/projects.html
+++ b/projects.html
@@ -50,22 +50,22 @@
         </div> -->
         <ul class="menu-list right-boxed">
             <li data-menuanchor="page1">
-                <a href="#page1">Home</a>
+                <a href="index.html#page">Home</a>
             </li>
             <li data-menuanchor="page2">
-                <a href="#page2">Specialization</a>
+                <a href="index.html#page2">Specialization</a>
             </li>
             <li data-menuanchor="page3">
-                <a href="#page3">Projects</a>
+                <a href="index.html#page3">Projects</a>
             </li>
             <li data-menuanchor="page4">
-                <a href="#page4">Services</a>
+                <a href="index.html#page4">Services</a>
             </li>
             <li data-menuanchor="page6">
-                <a href="#page6">Reviews</a>
+                <a href="index.html#page6">Reviews</a>
             </li>
             <li data-menuanchor="page7">
-                <a href="#page7">Contact</a>
+                <a href="index.html#page7">Contact</a>
             </li>
         </ul>
         <div class="menu-footer right-boxed">
@@ -103,7 +103,7 @@
             <span class="icon-bar"></span>
         </button>
 
-        <a class="brand" href="#">
+        <a class="brand" href="index.html#page1">
             <img class="brand-img" alt="" src="images/Default_Logo_1024x1024.jpg"> <!-- Logo -->
             <div class="brand-info">
                 <div class="brand-name">Dark Rose </div> <!-- Brand Name -->
@@ -185,10 +185,11 @@
                                                     "images/Projects/Default/bg2-5.jpg",
                                                     "images/Projects/Default/bg2-6.jpg"
                                                     ]'>
-
-                                                <h3>Project Title 1</h3>
-                                                <p>Team Size: 3</p>
-                                                <p>Role: Frontend Developer</p>
+                                                <div class="project-box-inner">
+                                                    <h3>Project Title 1</h3>
+                                                    <p>Team Size: 3</p>
+                                                    <p>Role: Frontend Developer</p>
+                                                </div>
                                             </div>
 
                                             <!-- -------- Project BOX -------- -->
@@ -377,50 +378,50 @@
                                         </section>
                                         <!-- Expanded Project Modal -->
                                         <div id="project-modal" class="modal">
-                                           
-                                                <div class="modal-content">
-                                                    <!-- <div> -->
-                                                        <!-- <span class="button-close">&times;</span> -->
-                                                        <!-- <span class="close"><a class="close-button-less">Close</a></span> -->
-                                                    <!-- </div> -->
 
-                                                    <!-- <h2 id="modal-title"></h2> -->
-                                                    <div class="modal-header">
-                                                        <h2 id="modal-title"></h2>
-                                                        <div class="modal-links" id="modal-links"></div>
-                                                    </div>
-                                                    <h2><strong>Team Size:</strong> <span id="modal-team"></span></h2>
-                                                    <p><strong>Role:</strong> <span id="modal-role"></span></p>
+                                            <div class="modal-content">
+                                                <!-- <div> -->
+                                                <!-- <span class="button-close">&times;</span> -->
+                                                <!-- <span class="close"><a class="close-button-less">Close</a></span> -->
+                                                <!-- </div> -->
 
-                                                    <!-- Links -->
-                                                    <div class="modal-section">
-                                                        <h3>Related Links</h3>
-                                                        <ul id="modal-links"></ul>
-                                                    </div>
-
-                                                    <!-- Image Carousel -->
-                                                    <div class="carousel">
-                                                        <button id="prev-btn">&#10094;</button>
-                                                        <div id="image-container"></div>
-                                                        <button id="next-btn">&#10095;</button>
-                                                    </div>
-
-                                                    <!-- Skills -->
-                                                    <div class="modal-section">
-                                                        <h3>Skills Learned</h3>
-                                                        <p id="modal-skills"></p>
-                                                    </div>
-
-                                                    <!-- Tools Used -->
-                                                    <div class="modal-section">
-                                                        <h3>Tools & Technologies</h3>
-                                                        <p id="modal-tools"></p>
-                                                    </div>
-
-                                                    <!-- <span class="popupCloseButton"><a class="close-button-less">Close</a></span> -->
-                                                    <span class="close"><a class="close-button-less">Close</a></span>
+                                                <!-- <h2 id="modal-title"></h2> -->
+                                                <div class="modal-header">
+                                                    <h2 id="modal-title"></h2>
+                                                    <div class="modal-links" id="modal-links"></div>
                                                 </div>
-                                            
+                                                <h2><strong>Team Size:</strong> <span id="modal-team"></span></h2>
+                                                <p><strong>Role:</strong> <span id="modal-role"></span></p>
+
+                                                <!-- Links -->
+                                                <div class="modal-section">
+                                                    <h3>Related Links</h3>
+                                                    <ul id="modal-links"></ul>
+                                                </div>
+
+                                                <!-- Image Carousel -->
+                                                <div class="carousel">
+                                                    <button id="prev-btn">&#10094;</button>
+                                                    <div id="image-container"></div>
+                                                    <button id="next-btn">&#10095;</button>
+                                                </div>
+
+                                                <!-- Skills -->
+                                                <div class="modal-section">
+                                                    <h3>Skills Learned</h3>
+                                                    <p id="modal-skills"></p>
+                                                </div>
+
+                                                <!-- Tools Used -->
+                                                <div class="modal-section">
+                                                    <h3>Tools & Technologies</h3>
+                                                    <p id="modal-tools"></p>
+                                                </div>
+
+                                                <!-- <span class="popupCloseButton"><a class="close-button-less">Close</a></span> -->
+                                                <span class="close"><a class="close-button-less">Close</a></span>
+                                            </div>
+
                                         </div>
 
 
