logo changes + added content

--- a/projects.html
+++ b/projects.html
@@ -171,10 +171,13 @@
 
                                         <section class="portfolio row-project-box">
 
-                                            <div class="projectPage-box" data-title="Website" data-team="3"
-                                                data-role="Frontend Developer"
-                                                data-skills="Responsive Design, API Integration, UI/UX"
-                                                data-tools="HTML, CSS, JavaScript, Figma" data-links='{
+                                            <div class="projectPage-box" data-title="Fredericton Museum Website" data-team="5"
+                                                data-role="Front-end & Back-end Developer, Database Design, "
+                                                data-skills="Worked on the "
+                                                data-tools="PHP, HTML, CSS, JavaScript, MySQL,
+                                                Microsoft Access, Microsoft SQL Server Manager,
+                                                Github, Visual Studio 2019, WampServer64" 
+                                                data-links='{
                                                         "GitHub": "https://github.com/example",
                                                         "Itch.io": "https://itch.io/example",
                                                         "Portfolio": "https://www.frederictonregionmuseum.com/"
@@ -185,11 +188,11 @@
                                                     "images/Projects/Default/bg2-5.jpg",
                                                     "images/Projects/Default/bg2-6.jpg"
                                                     ]'>
-                                                <div class="project-box-inner">
-                                                    <h3>Project Title 1</h3>
-                                                    <p>Team Size: 3</p>
+                                                
+                                                    <h3>Fredericton Museum Website</h3>
+                                                    <p>Team Size: 5</p>
                                                     <p>Role: Frontend Developer</p>
-                                                </div>
+                                              
                                             </div>
 
                                             <!-- -------- Project BOX -------- -->
@@ -356,7 +359,8 @@
 
                                             <div class="projectPage-box" data-title="My Portfolio Website" data-team="3"
                                                 data-role="Front-end & Back-end Developer"
-                                                data-skills="Responsive Design, UI/UX Design"
+                                                data-skills="Responsive Design,
+                                                 Color Pallet Creation, Theme Design, AI Image Generation, More Comming"
                                                 data-tools="HTML, CSS, JavaScript, AI Image Generation (Canvas Dream Lab & Dall-E 3), Visual Studio Code (Favorite Attachents Used: Live Preview)"
                                                 data-links='{
                                                         "GitHub": "https://github.com/example",
