Done this is my site (Need to add logo to main page but else its done)

--- a/projects.html
+++ b/projects.html
@@ -140,8 +140,15 @@
         2025<!--© Jonny 2017. ??? its open source so i dont think this is necessary but ill include the designed by-->
     </div>
 
-
-
+    <!-- <h2>Hexagons</h2> -->
+    
+    <body class="honeycomb-body">
+        <div class="global-honeycomb-elements">
+            <h2>Hexagons</h2>
+            <div id="pattern"></div>
+            <div id="gradient"></div>
+        </div>
+    </body>
     <!-- Page Content -->
     <div class="pagepiling">
         <!-- ---------------- Projects Section ---------------- -->
@@ -468,6 +475,7 @@
     <!-- Scripts -->
     <script src="js/scripts.js"></script>
     <script src="js/projectScripts.js"></script>
+    <script src="js/mousefollowhoneycomb.js"></script>
 
 </body>
 
