--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Styles -->
     <link href="css/style.css" rel="stylesheet" media="screen">
+    <link href="css/mystyles.css" rel="stylesheet">
 </head>
 
 <body class="body-full-page">
@@ -138,7 +139,16 @@
     <div class="pagepiling">
         <div data-anchor="page1" class="pp-scrollable text-white section section-1">
             <div class="scroll-wrap">
-                <div class="section-bg" style="background-image:url(images/bg/bg1_With_Logo_V2_NoFlowerNoR.png);"></div> 
+                <!-- <div class="section-bg" style="background-image:url(images/bg/bg1_With_Logo_V2_NoFlowerNoR.png);"> -->
+                <div class="section-bg" style="background-image:url(images/bg/bg2.webp);">
+                     <div class="global-honeycomb-elements">
+                        <div id="gradient"></div>
+                        <div id="gradient-full"></div>
+                        <div id="pattern"></div>
+                        </div> 
+                   
+            </div> 
+                
                 <div class="scrollable-content">
                     <div class="vertical-centred">
                         <div class="boxed boxed-inner">
@@ -164,6 +174,8 @@
                 </div>
             </div>
         </div>
+
+
         <div data-anchor="page2" class="pp-scrollable section section-2">
             <div class="scroll-wrap">
                 <div class="scrollable-content">
@@ -707,6 +719,7 @@
 
     <!-- Scripts -->
     <script src="js/scripts.js"></script>
+    <script src="js/mousefollowhoneycomb.js"></script>
 </body>
 
 </html>
