Save project backgrounds

--- a/index.html
+++ b/index.html
@@ -188,11 +188,16 @@
                                         <div class="row">
                                             <div class="col-md-5 col-lg-5">
                                                 <p class="subtitle-top text-dark">About me</p>
-                                                <h2 class="title-uppercase">My mission is<br> <span
-                                                        class="text-primary">develop</span> the best
-                                                    products possible, be it Games, Websites, or Software</h2>
-                                                    If I had to describe myself with a single statement i would have to go with the following: "When I was a kid, I would always struggle putting on helmets due to having a physically bigger head than most
-                                                    and you know what they say about big heads, big brains, so it must mean that I am very smart."
+                                                <h2 class="title-uppercase">My Goal is to<br> <span
+                                                        class="text-primary">develop</span> 
+                                                        clean, efficient, and engaging digital experiences</h2>
+                                                    I'm a student developer with hands-on experience in game development, web development (frontend and backend), and database management.
+                                                    My goal is to build clean, efficient, and engaging digital experiences, whether it's through a game engine or a full-stack web app.
+                                                    I'm currently looking for opportunities to grow as a developer and contribute to real-world projects.
+
+                                                    <!-- Old Joke Statement: -->
+                                                    <!-- If I had to describe myself with a single statement i would have to go with the following: "When I was a kid, I would always struggle putting on helmets due to having a physically bigger head than most -->
+                                                    <!-- and you know what they say about big heads, big brains, so it must mean that I am very smart." -->
                                             </div>
                                             <div class="col-md-6 col-lg-5 col-md-offset-1 col-lg-offset-2">
                                                 <div class="progress-bars">
@@ -255,11 +260,17 @@
             <div class="scroll-wrap">
                 <!-- Project Background Images -->
                 <div class="bg-changer">
-                    <div class="section-bg" style="background-image:url(images/bg/bg2.jpg);"></div>
-                    <div class="section-bg" style="background-image:url(images/bg/bg2-2.jpg);"></div>
+                    <div class="section-bg" style="background-image:url(images/bg/bg_Museum.jpg);"></div>
+                    <div class="section-bg" style="background-image:url(images/bg/bg_GlobalGameJam2024.png);"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg2-3.jpg);"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg2-4.jpg);"></div>
-                    <div class="section-bg" style="background-image:url(images/bg/bg2-5.jpg);"></div>
+                    <div class="section-bg" style="background-image:url(images/bg/bg_Arduino.jpg);">
+                        <!-- Very Bad (Sorry Future Me) but im out of time -->
+                        <video style="padding-top: 10%;" width="100%" height="80%" preload="metadata" autoplay muted>
+                        <source src="images/bg/Part1_Final.MP4" type="video/mp4">
+                        Your browser does not support the video tag.
+                        </video>
+                    </div>
                     <div class="section-bg" style="background-image:url(images/bg/bg2-6.jpg);"></div>
                 </div>
                 <!-- Project Background Images -->
@@ -268,34 +279,36 @@
                     <div class="vertical-centred">
                         <div class="boxed boxed-inner">
                             <div class="vertical-title hidden-xs hidden-sm"><span>my works</span></div>
-                            <div class="boxed">
+                            <div class="boxed"> 
                                 <div class="container">
                                     <div class="intro">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <h2 class="title-uppercase text-white">Featured Works</h2>
                                                 <div class="row-project-box row">
+                                                    <!-- Project -->
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                        <a href="https://www.frederictonregionmuseum.com/" target="_blank" rel="noopener noreferrer" class="project-box">
+                                                        <a href="projects.html" target="_blank" rel="noopener noreferrer" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Fredericton Museum's Website (5 members)</h5>
                                                                 <div class="project-category">Web Development & Database Management</div>
-                                                                <div class=" pull-right">ps. Click For More Info</div>
+                                                                <div class=" pull-right" style="color:aqua;">ps. Click For More Info</div>
                                                             </div>
                                                         </a>
-                                                        </div>
+                                                    </div>
+                                                    <!-- Project -->
                                                         <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                        <a href="" class="project-box">
+                                                        <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Global Game Jam 2024 (4 members)</h5>
                                                                 <div class="project-category">Game Development</div>
-                                                                <div class="project-category">Role: Animation, Programmer</div>
+                                                                <div class="project-category">Role: Animation, 3D Modeling, Programmer</div>
                                                                 <!-- <div class="project-category">->3D Infinity Runner Game</div> -->
-                                                                </div>
+                                                            </div>
                                                                 </a>
                                                                 </div>
                                                                 <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                                    <a href="" class="project-box">
+                                                                    <a href="projects.html" class="project-box">
                                                                         <div class="project-box-inner">
                                                                             <h5>2.5D Crystal Knight (4 members)</h5>
                                                                             <div class="project-category">Game Development</div>
@@ -306,7 +319,7 @@
                                                         </a>
                                                     </div>
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                        <a href="" class="project-box">
+                                                        <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Global Game Jam 2025</h5>
                                                                 <div class="project-category">Game Development</div>
@@ -317,7 +330,16 @@
                                                         </a>
                                                     </div>
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                        <a href="" class="project-box">
+                                                        <a href="projects.html" class="project-box">
+                                                            <div class="project-box-inner">
+                                                                <h5>Arduino DIY Stream Deck (Solo)</h5>
+                                                                <div class="project-category">Mechatronics</div>
+                                                                <div class="project-category">Role: Arduino Programmer, Very Official Circuit Design Engineer(&#128527 &#128521)</div>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
+                                                        <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Rennovate Toilet</h5>
                                                                 <div class="project-category">House Design</div>
@@ -325,7 +347,7 @@
                                                         </a>
                                                     </div>
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                        <a href="" class="project-box">
+                                                        <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Rennovate Toilet</h5>
                                                                 <div class="project-category">House Design</div>
@@ -333,15 +355,7 @@
                                                         </a>
                                                     </div>
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                        <a href="" class="project-box">
-                                                            <div class="project-box-inner">
-                                                                <h5>Rennovate Toilet</h5>
-                                                                <div class="project-category">House Design</div>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-                                                    <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                        <a href="" class="project-box">
+                                                        <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Rennovate Toilet</h5>
                                                                 <div class="project-category">House Design</div>
@@ -349,8 +363,8 @@
                                                         </a>
                                                     </div>
                                                 </div>
-                                                <div class="col-project-box col-sm-6 col-md-4 col-lg-3 pull-right">
-                                                    <a href="projects.html" class="h5 link-arrow text-white">view all projects <i class="icon icon-chevron-right"></i></a>
+                                                <div class="col-project-box col-sm-6 col-md-4 col-lg-3 pull-right"> 
+                                                    <a href="projects.html" class="h5 link-arrow text-white">view all projects<i class="icon icon-chevron-right"></i></a>
                                                 </div>
                                             </div>
                                         </div>
