--- a/index.html
+++ b/index.html
@@ -262,7 +262,13 @@
                 <div class="bg-changer">
                     <div class="section-bg" style="background-image:url(images/bg/bg_Museum.jpg);"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg_GlobalGameJam2024.png);"></div>
-                    <div class="section-bg" style="background-image:url(images/bg/bg2-3.jpg);"></div>
+                    <div class="section-bg" style="background-image:url(images/bg/bg2-3.jpg);">
+                        <!-- Very Bad (Sorry Future Me) but im out of time -->
+                        <video style="padding-top: 10%;" width="100%" height="80%" preload="metadata" autoplay muted controls loop>
+                            <source src="images/bg/bg_CrystalKnight.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
                     <div class="section-bg" style="background-image:url(images/bg/bg2-4.jpg);"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg_Arduino.jpg);">
                         <!-- Very Bad (Sorry Future Me) but im out of time -->
@@ -364,7 +370,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-project-box col-sm-6 col-md-4 col-lg-3 pull-right"> 
-                                                    <a href="projects.html" class="h5 link-arrow text-white">view all projects<i class="icon icon-chevron-right"></i></a>
+                                                    <a href="projects.html" class="h5 link-arrow text-white">all projects<i class="icon icon-chevron-right"></i></a>
                                                 </div>
                                             </div>
                                         </div>
