--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <!-- Project Background Images -->
                 <div class="bg-changer">
                     <div class="section-bg" style="background-image:url(images/bg/bg_Museum.jpg);"></div>
-                    <div class="section-bg" style="background-image:url(images/bg/bg_GlobalGameJam2024.png);"></div>
+                    <div class="section-bg" style="background-image:url();"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg2-3.jpg);">
                         <!-- Very Bad (Sorry Future Me) but im out of time -->
                         <video style="padding-top: 10%;" width="100%" height="80%" preload="metadata" autoplay muted controls loop>
@@ -269,7 +269,7 @@
                             Your browser does not support the video tag.
                         </video>
                     </div>
-                    <div class="section-bg" style="background-image:url(images/bg/bg2-4.jpg);"></div>
+                    <div class="section-bg" style="background-image:url(images/Projects/4GameJam2025/BubbleUnknown_Gameplay_1.gif);"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg_Arduino.jpg);">
                         <!-- Very Bad (Sorry Future Me) but im out of time -->
                         <video style="padding-top: 10%;" width="100%" height="80%" preload="metadata" autoplay muted>
