Website Reorganization (removed some sections reordered others) + Added proper links in side popout menu

--- a/index.html
+++ b/index.html
@@ -48,19 +48,22 @@
                 <a href="#page1">Home</a>
             </li>
             <li data-menuanchor="page2">
-                <a href="#page2">Specialization</a>
+                <a href="#page2">Quick About Me</a>
             </li>
             <li data-menuanchor="page3">
                 <a href="#page3">Projects</a>
             </li>
-            <li data-menuanchor="page4">
+            <li data-menuanchor="page5">
+                <a href="#page4">Resume</a>
+            </li>
+            <!-- <li data-menuanchor="page4">
                 <a href="#page4">Services</a>
             </li>
             <li data-menuanchor="page6">
                 <a href="#page6">Reviews</a>
-            </li>
+            </li> -->
             <li data-menuanchor="page7">
-                <a href="#page7">Contact</a>
+                <a href="#page5">Contact</a>
             </li>
         </ul>
         <div class="menu-footer right-boxed">
@@ -80,6 +83,7 @@
             </div>
             <div class="copy">
                 <!--© Jonny 2017. All Rights Reseverd<br> ??? its open source so i dont think this is necessary but ill include the designed by-->
+                Email: JustinRioux0@outlook.com </br></br>
                 Original Temp Design by LoganCee
             </div>
         </div>
@@ -260,8 +264,6 @@
             <div class="scroll-wrap">
                 <!-- Project Background Images -->
                 <div class="bg-changer">
-                    <div class="section-bg" style="background-image:url(images/bg/bg_Museum.jpg);"></div>
-                    <div class="section-bg" style="background-image:url();"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg2-3.jpg);">
                         <!-- Very Bad (Sorry Future Me) but im out of time -->
                         <video style="padding-top: 10%;" width="100%" height="80%" preload="metadata" autoplay muted controls loop>
@@ -269,6 +271,8 @@
                             Your browser does not support the video tag.
                         </video>
                     </div>
+                    <div class="section-bg" style="background-image:url(images/bg/bg_Museum.jpg);"></div>
+                    <div class="section-bg" style="background-image:url(images/bg/bg_GlobalGameJam2024.png);"></div>
                     <div class="section-bg" style="background-image:url(images/Projects/4GameJam2025/BubbleUnknown_Gameplay_1.gif);"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg_Arduino.jpg);">
                         <!-- Very Bad (Sorry Future Me) but im out of time -->
@@ -294,6 +298,17 @@
                                                 <div class="row-project-box row">
                                                     <!-- Project -->
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
+                                                        <a href="projects.html" class="project-box">
+                                                            <div class="project-box-inner">
+                                                                <h5>2.5D Crystal Knight (4 members)</h5>
+                                                                <div class="project-category">Game Development</div>
+                                                                <div class="project-category">Role: Programmer</div>
+                                                                <!-- <div class="project-category">->2.5D RPG Quest Game</div> -->
+                                                                <!-- <div class=" pull-right">Click For More</div> -->
+                                                            </div>
+                                            </a>
+                                        </div>
+                                                    <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
                                                         <a href="projects.html" target="_blank" rel="noopener noreferrer" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Fredericton Museum's Website (5 members)</h5>
@@ -312,18 +327,8 @@
                                                                 <!-- <div class="project-category">->3D Infinity Runner Game</div> -->
                                                             </div>
                                                                 </a>
-                                                                </div>
-                                                                <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
-                                                                    <a href="projects.html" class="project-box">
-                                                                        <div class="project-box-inner">
-                                                                            <h5>2.5D Crystal Knight (4 members)</h5>
-                                                                            <div class="project-category">Game Development</div>
-                                                                            <div class="project-category">Role: Programmer</div>
-                                                                            <!-- <div class="project-category">->2.5D RPG Quest Game</div> -->
-                                                                            <!-- <div class=" pull-right">Click For More</div> -->
                                                             </div>
-                                                        </a>
-                                                    </div>
+                                                                
                                                     <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
                                                         <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
@@ -344,7 +349,7 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
+                                                    <!-- <div class="col-project-box col-sm-6 col-md-4 col-lg-3">
                                                         <a href="projects.html" class="project-box">
                                                             <div class="project-box-inner">
                                                                 <h5>Rennovate Toilet</h5>
@@ -367,7 +372,7 @@
                                                                 <div class="project-category">House Design</div>
                                                             </div>
                                                         </a>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                                 <div class="col-project-box col-sm-6 col-md-4 col-lg-3 pull-right"> 
                                                     <a href="projects.html" class="h5 link-arrow text-white">all projects<i class="icon icon-chevron-right"></i></a>
@@ -382,7 +387,7 @@
                 </div>
             </div>
         </div>
-        <div data-anchor="page4" class="pp-scrollable section section-4">
+        <!-- <div data-anchor="page4" class="pp-scrollable section section-4">
             <div class="scroll-wrap">
                 <div class="scrollable-content">
                     <div class="vertical-centred">
@@ -422,7 +427,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div data-anchor="page5" class="pp-scrollable text-white section section-6">
             <div class="scroll-wrap">
                 <div class="section-bg" style="background-image:url(images/bg/bg3.jpg);"></div>
@@ -513,13 +518,13 @@
                 </div>
             </div>
         </div>
-        <div data-anchor="page6" class="pp-scrollable section section-4">
+        <!-- <div data-anchor="page6" class="pp-scrollable section section-4">
             <div class="scroll-wrap">
                 <div class="scrollable-content">
                     <div class="vertical-centred">
                         <div class="boxed boxed-inner">
                             <div class="vertical-title text-dark hidden-xs hidden-sm"><span>Partners</span></div>
-                            <!-- <div class="boxed">
+                             <div class="boxed">
                                 <div class="container">
                                     <div class="intro overflow-hidden">
                                         <div class="row">
@@ -562,13 +567,13 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div data-anchor="page7" class="pp-scrollable text-white section section-6">
+        </div> -->
+        <!-- <div data-anchor="page7" class="pp-scrollable text-white section section-6">
             <div class="scroll-wrap">
                 <div class="section-bg" style="background-image:url(images/bg/bg4.jpg);"></div>
                 <div class="scrollable-content">
@@ -641,13 +646,13 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div data-anchor="page8" class="pp-scrollable section section-6">
             <div class="scroll-wrap">
                 <div class="scrollable-content">
                     <div class="vertical-centred">
                         <div class="boxed boxed-inner">
-                            <div class="vertical-title text-dark hidden-xs hidden-sm"><span>contact</span></div>
+                            <div class="vertical-title text-dark hidden-xs hidden-sm"><span>contact Me</span></div>
                             <div class="boxed">
                                 <div class="container">
                                     <div class="intro overflow-hidden">
