fixed Arduino videos

--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
                     <div class="section-bg" style="background-image:url(images/bg/bg_Museum.jpg);"></div>
                     <div class="section-bg" style="background-image:url(images/bg/bg_GlobalGameJam2024.png);"></div>
                     <div class="section-bg" style="background-image:url(images/Projects/4GameJam2025/BubbleUnknown_Gameplay_1.gif);"></div>
-                    <div class="section-bg" style="background-image:url(images/bg/bg_Arduino.jpg);">
+                    <div class="section-bg" style="background-image:url(images/Projects/5ArduinoStreamDeck/StreamDeck_2_Edited.PNG);">
                         <!-- Very Bad (Sorry Future Me) but im out of time -->
                         <video style="padding-top: 10%;" width="100%" height="80%" preload="metadata" autoplay muted>
-                        <source src="images/bg/Part1_Final.MP4" type="video/mp4">
+                        <source src="images/Projects/5ArduinoStreamDeck/Arduino_1_BetterQuality.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                         </video>
                     </div>
